--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ click>=8.0.0
 requests>=2.0.0
 pytest>=7.0.0
 black>=24.0.0  # for code formatting
+build>=1.0.0  # for package building
+twine>=4.0.0  # for package publishing
+wheel>=0.42.0  # for package building
