Update Python commands to use python3 and enhance pyproject.toml with dynamic fields and classifiers

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,18 +7,23 @@ name = "py_weather_2"
 version = "0.1.0"
 description = "A Python CLI weather app"
 readme = "README.md"
-requires-python = ">=3.6"
+requires-python = ">=3.8"
 license = { file = "LICENSE" }
-dependencies = ["requests"]
+authors = [
+    { name = "Weather CLI Contributors" }
+]
+dynamic = ["dependencies", "classifiers"]
 
-# Add this section to declare dynamic fields
-dynamic = ["urls", "classifiers", "scripts"]
+[project.urls]
+"Bug Reports" = "https://github.com/devopsjester/py-weather-2/issues"
+"Source" = "https://github.com/devopsjester/py-weather-2"
 
-# Define the necessary fields
+[project.scripts]
+weather = "weather:cli"
+
 [tool.setuptools.dynamic]
-urls = { "Bug Reports" = "https://github.com/devopsjester/py-weather-2/issues", "Source" = "https://github.com/devopsjester/py-weather-2" }
-classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
-scripts = { "weather" = "weather:cli" }
+dependencies = {file = ["requirements.in"]}
+classifiers = {file = ["classifiers.txt"]}
 
 [tool.black]
 line-length = 88
