--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
       "version": "3.12"
     }
   },
-  "postCreateCommand": "pip install -r requirements.txt",
+  "postCreateCommand": "python3 -m pip install -r requirements.txt",
   "customizations": {
     "vscode": {
       "extensions": [
