--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,8 @@ jobs:
         
     - name: Install build dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install build twine
+        python3 -m pip install --upgrade pip
+        python3 -m pip install build twine
         
     - name: Build package
       run: python -m build
