--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
         python3 -m pip install build twine
         
     - name: Build package
-      run: python -m build
+      run: python3 -m build
       
     - name: Create Release
       uses: softprops/action-gh-release@v1
