--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ black>=24.0.0  # for code formatting
 build>=1.0.0  # for package building
 twine>=4.0.0  # for package publishing
 wheel>=0.42.0  # for package building
+fastapi>=0.110.0  # for web interface
+uvicorn>=0.27.0  # ASGI server
+jinja2>=3.0.0   # for templates
