feat: enhance CI/CD workflows with linting and build steps, update author information in setup.py

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-      id-token: write
+      packages: write
 
     steps:
     - uses: actions/checkout@v4
@@ -37,3 +37,9 @@ jobs:
         generate_release_notes: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Publish to GitHub Packages
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        python -m twine upload --repository-url https://upload.pypi.org/legacy/ dist/*
