--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI Pipeline
 
 on:
   push:
@@ -7,6 +7,31 @@ on:
     branches: [ main ]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.12"
+        
+    - name: Install dependencies
+      run: |
+        python3 -m pip install --upgrade pip
+        python3 -m pip install flake8 black isort
+        python3 -m pip install -r requirements.txt
+        
+    - name: Check formatting with Black
+      run: black --check .
+      
+    - name: Check imports with isort
+      run: isort --check-only --diff .
+      
+    - name: Lint with flake8
+      run: flake8 . --count --max-line-length=120 --statistics
+
   test:
     runs-on: ubuntu-latest
     strategy:
@@ -30,8 +55,8 @@ jobs:
       run: |
         python3 -m pytest tests/ -v
 
-  build-and-publish:
-    needs: test
+  build:
+    needs: [test, lint]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
@@ -46,15 +71,14 @@ jobs:
     - name: Install dependencies
       run: |
         python3 -m pip install --upgrade pip
-        python3 -m pip install build twine
+        python3 -m pip install build
         
     - name: Build package
       run: python3 -m build
       
-    - name: Create GitHub Release
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v3
       with:
-        files: dist/*
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        name: dist
+        path: dist/
+        retention-days: 5
