refactor: improve code readability and structure, update CI configuration, and enhance weather service error handling

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       run: isort --check-only --diff .
       
     - name: Lint with flake8
-      run: flake8 . --count --max-line-length=120 --statistics
+      run: flake8 . --count --max-line-length=120 --statistics --exclude venv
 
   test:
     runs-on: ubuntu-latest
