--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,4 +42,4 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        python -m twine upload --repository-url https://upload.pypi.org/legacy/ dist/*
+        python3 -m twine upload --repository-url https://upload.pypi.org/legacy/ dist/*
