--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,7 @@ jobs:
       run: |
         python3 -m pip install --upgrade pip
         python3 -m pip install build
+        python3 -m pip install -e .
         
     - name: Build package
       run: python3 -m build
